--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.3",
     "@vercel/analytics": "^1.5.0",
+    "framer-motion": "^12.23.19",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
