--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.2",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.19",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.9"
